--- a/cellphone.html
+++ b/cellphone.html
@@ -13,8 +13,8 @@
   <h1>BEST Electronics</h1>
 </hearder>
   <nav><ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="About.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
@@ -23,7 +23,7 @@
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">Contact</a></li>
+    <li><a href="Contact.html">Contact</a></li>
   </nav></ul>   
 
   <div class ="pagebanner">
