--- a/LG.html
+++ b/LG.html
@@ -15,16 +15,16 @@
 	<h1>BEST Electronics</h1>
 
   <nav><ul>
-    <li><a href="">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    <a href="#" class="dropbtn">PRODUCTS</a>
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
-    </li>
+      </li>
     <li><a href="">CONTACT</a></li>
   </ul>
   </nav>   
@@ -36,9 +36,9 @@
  
 	<div id="row2">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="Homepage.html">Home</a></li>
 			<li> > </li>
-    		<li><a href="products.html">Category</a></li>
+    		<li><a href="cellphone.html">Category</a></li>
     		<li> > </li>
     		<li class="active">Now</li>
 		</ul>
@@ -54,25 +54,29 @@
 				</tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
-					<p> Qualcomm Snapdragon 210 processor</p>
+					<p style ="background-color:#C8CBCC"> Qualcomm Snapdragon 210 processor</p>
 					<p> Android 5.1 Lollipop OS</p>
-					<p>4G LTE speed</p>
+					<p style ="background-color:#C8CBCC"> 4G LTE speed</p>
 					<p>5" TFT touch screen</p>
-					<p>5MP rear-facing camera</p>
+					5MP rear-facing camera</p>
 				</div></tr>
 			</table>
 		</section>
-		<section id = "picture">
 			
-			<img src= "img/LG2.jpg" alt = "Straight Talk LG Access Android Prepaid Smartphone">
+		<div id = "picture">
+			<div id = "item1"><img  src=  "img/lg1.jpg" alt = "Straight Talk LG Access Android Prepaid Smartphone"></div>
+			<div id = "item2"><img  src = "img/lg2.jpg"  alt = "Straight Talk LG Access Android Prepaid Smartphone"></div>
+			<div id = "item3"><img  src = "img/lg3.jpg"  alt = "Straight Talk LG Access Android Prepaid Smartphone"></div>	
+		</div>			
 			
-		</section>
+		
 	</div>
 
 	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
+</div>
+
 
 
 </body>
