--- a/S7.html
+++ b/S7.html
@@ -2,30 +2,33 @@
 <html lang = "en">
 	<head>
 
-		<title> s7</title>
+		<title> LG </title>
 		<meta charset = "utf-8">
 		<meta name = "Description", content = "Product Details">
 		<meta name = "keywords", content = "IMAGE, PRICE, INFO">
 		<meta name = "author", content = "Jessica Zeng">
-		<link rel="stylesheet" href="css/product_detail.css">			
+		<link rel="stylesheet" href="css/product_detail.css">	
+		
 	</head>
 <body class = "body">
-	<hearder id="header">
+	<hearder id=header>
 	<h1>BEST Electronics</h1>
-	<nav><ul>
-    <li><a href="">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+
+  <nav><ul>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    <a href="www.google.com" class="dropbtn">PRODUCTS</a>
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="http://www.yahoo.com">Link 1</a>
-      <a href="http://www.douban.com">Link 2</a>
-      <a href="http://www.youtube.com">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
-    </li>
+      </li>
     <li><a href="">CONTACT</a></li>
-  	</ul></nav>   
- 	</hearder>
+  </ul>
+  </nav>   
+ </hearder>
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
   	<img src="img/ebanner.jpg" alt="cellphone_banner" >
@@ -33,9 +36,9 @@
  
 	<div id="row2">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="Homepage.html">Home</a></li>
 			<li> > </li>
-    		<li><a href="products.html">Category</a></li>
+    		<li><a href="cellphone.html">Category</a></li>
     		<li> > </li>
     		<li class="active">Now</li>
 		</ul>
@@ -50,29 +53,31 @@
 				<tr><p id = "details">Work, rest and play with the Samsung Galaxy S7 edge. A massive 5.5-inch Super AMOLED touchscreen goes all the way to the edges of the phone so that you get the maximum area possible to work with. Solid water resistance, great processing and masses of memory round out this Samsung Galaxy S7 edge.</p></tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
 				<div id ="feature">
-					<p>Qualcomm Snapdragon 820 processor</p>
+					<p style ="background-color:#C8CBCC">Qualcomm Snapdragon 820 processor</p>
 					<p> Android 6.0 Marshmallow OS</p>
-					<p>5.5" Super AMOLED Quad HD touch screen</p>
+					<p style ="background-color:#C8CBCC">5.5" Super AMOLED Quad HD touch screen</p>
 					<p>12.0MP rear-facing camera for full HD pictures and videos</p>
-					<p>32GB internal memory plus microSD slot</p>
+					<p style ="background-color:#C8CBCC">32GB internal memory plus microSD slot</p>
 					<p>Cloud support lets you access your files anywhere</p>
-					<p>Water-resistant IP68</p>
+					<p style ="background-color:#C8CBCC">Water-resistant IP68</p>
 					<p>Dual Edge Design and Experience</p>
 				</div>
 				</tr>
 			</table>
 
 		</section>
-		<section id = "picture">
-		<img src= "img/s7.jpg" alt = "Samsun-S7-edge">
-		</section>
+		<div id = "picture">
+			<div id = "item1"><img  src= "img/S7.jpg" alt = "S7" ></div>
+			<div id = "item2"><img  src = "img/s72.jpg" alt = "S7"></div>
+			<div id = "item3"><img  src = "img/s73.jpg" alt = "S7"></div>	
+		</div>
 	
 	</div>
 
-	
-<footer>
+<div class = "footer">
 	<h5> 2016 E-BestMart.com, all rights reserved.</h5>
-</footer>
+</div>
+
 
 
 </body>
