--- a/tablet.html
+++ b/tablet.html
@@ -14,17 +14,17 @@
   <h1>BEST Electronics</h1>
 </hearder>
   <nav><ul>
-    <li><a href="Homepage.html">Home</a></li>
-    <li><a href="About.html">About</a></li>
+  <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">Cellphones</a>
+      <a href="cellphone.html">Cell phones</a>
       <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="Contact.html">Contact</a></li>
+   
   </nav></ul>   
 
   <div class ="pagebanner">
@@ -43,7 +43,7 @@
         <img src="img/tb1.jpg" alt="tb1" >
         <div class="desc">
             <h4 class="title-heading">
-            <a href="">RCA 7" Tablet 16GB Quad Core</a>
+            <a href="rca7.html">RCA 7" Tablet 16GB Quad Core</a>
             </h4>
           <div class="title-content"> 
             <h2>$39.98</h2>
@@ -59,7 +59,7 @@
         <img src="img/tb2.jpg" alt="tb2" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">RCA Viking Pro 10.1" 2-in-1 Tablet 32GB Quad Core</a>
+            <a href="rcavking.html">RCA Viking Pro 10.1" 2-in-1 Tablet 32GB Quad Core</a>
             </h4>
           <div class="title-content"> 
               <h2>$79.99</h2>
@@ -75,7 +75,7 @@
         <img src="img/tb3.jpg" alt="tb3" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">RCA 7" Tablet 16GB Quad Core includes Keyboard / Case</a>
+            <a href="rca7withcase.html">RCA 7" Tablet 16GB Quad Core includes Keyboard / Case</a>
             </h4>
           <div class="title-content"> 
               <h2>$239.00</h2>
@@ -91,7 +91,7 @@
         <img src="img/tb4.jpg" alt="tb4" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">Nextbook Flexx 10.1" 2-in-1 Tablet 2/32GB Intel Quad Core Windows 10</a>
+            <a href="Nextbook.html">Nextbook Flexx 10.1" 2-in-1 Tablet 2/32GB Intel Quad Core Windows 10</a>
             </h4>
           <div class="title-content"> 
               <h2>$120.00</h2>
@@ -107,7 +107,7 @@
         <img src="img/tb5.jpg" alt="tb5" >
         <div class="desc">
           <h4 class="title-heading">
-            <a href="">TG-TEK 16GB 10.1" Touchscreen Dual Camera WiFi Quad Core</a>
+            <a href="TG-TEK.html">TG-TEK 16GB 10.1" Touchscreen Dual Camera WiFi Quad Core</a>
             </h4>
           <div class="title-content"> 
               <h2>$120.00</h2>
@@ -125,7 +125,7 @@
  
 
   <div class="footer">
-    <p>BEST Electronics</p>
+    <p>2016 E-BestMart.com, all rights reserved.</p>
   </footer>
 </body>
 </html>
