--- a/mba.html
+++ b/mba.html
@@ -15,10 +15,15 @@
 	<h1>BEST Electronics</h1>
 
   <nav><ul>
-    <li><a href="home.html">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    
+    <a href="#" class="dropbtn">Products</a>
+    <div class="dropdown-content">
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
+    </div>
     <div class="dropdown-content">
       <a href="cellphone.html">CellPhones</a>
       <a href="#">Link 2</a>
