--- a/y510p.html
+++ b/y510p.html
@@ -15,17 +15,16 @@
 	<h1>BEST Electronics</h1>
 
   <nav><ul>
-    <li><a href="home.html">HOME</a></li>
-    <li><a href="">ABOUT</a></li>
+   <li><a href="Homepage.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li class="dropdown">
-    
+    <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">CellPhones</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="cellphone.html">Cell phones</a>
+      <a href="laptop.html">Laptops</a>
+      <a href="tablet.html">Tablets</a>
     </div>
     </li>
-    <li><a href="">CONTACT</a></li>
   </ul>
   </nav>   
  </hearder>
