--- a/Nextbook.html
+++ b/Nextbook.html
@@ -16,7 +16,7 @@
 
   <nav><ul>
     <li><a href="Homepage.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="About.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
@@ -25,6 +25,7 @@
       <a href="laptop.html">Laptops </a>
     </div>
     </li>
+     <li><a href="Contact.html">Contact</a></li>
     
   </ul>
   </nav>   
