linked about&contact

--- a/hpblack.html
+++ b/hpblack.html
@@ -12,19 +12,20 @@
 	<hearder id=header>
 	<h1>BEST Electronics</h1>
 
- <nav><ul>
-  <li><a href="Homepage.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+  <nav><ul>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="About.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">Cell phones</a>
+      <a href="cellphone.html">Cellphones</a>
       <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
+    <li><a href="Contact.html">Contact</a></li>
   </ul>
-  </nav>   
+  </nav  
  </hearder>
   <div class ="pagebanner">
   	<!-- <h1 class="title-banner">Cellphones</h1> -->
