--- a/Nextbook.html
+++ b/Nextbook.html
@@ -20,13 +20,12 @@
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">CellPhones</a>
+      <a href="cellphone.html">Cellphones</a>
+      <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
-      <a href="laptop.html">Laptops </a>
     </div>
     </li>
-     <li><a href="Contact.html">Contact</a></li>
-    
+    <li><a href="Contact.html">Contact</a></li>
   </ul>
   </nav>   
  </hearder>
