--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,15 @@
     
     <h2>Contact Us</h2>
   </header>
+<div class="img">
 
+  		<a target="_blank" href="img_fjords.jpg">
+
+    			<img src="img/building.jpg" width="600" height="400">
+
+  		</a>
+	
+	</div>
   <div class ="table">
     <div class="row">
         <div class="desc">
