--- a/Homepage.html
+++ b/Homepage.html
@@ -236,7 +236,7 @@ body {font-family: 'Raleway', Helvetica, Arial, sans-serif;margin:0px;}
 </hearder>
   <nav><ul>
     <li><a href="Homepage.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="About.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
@@ -245,6 +245,7 @@ body {font-family: 'Raleway', Helvetica, Arial, sans-serif;margin:0px;}
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
+     <li><a href="Contact.html">Contact</a></li>
   
   </nav></ul>   
 
