--- a/tablet.html
+++ b/tablet.html
@@ -15,15 +15,16 @@
 </hearder>
   <nav><ul>
   <li><a href="Homepage.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="About.html">About</a></li>
     <li class="dropdown">
     <a href="#" class="dropbtn">Products</a>
     <div class="dropdown-content">
-      <a href="cellphone.html">Cell phones</a>
+      <a href="cellphone.html">Cellphones</a>
       <a href="laptop.html">Laptops</a>
       <a href="tablet.html">Tablets</a>
     </div>
     </li>
+    <li><a href="Contact.html">Contact</a></li>
    
   </nav></ul>   
 
