updated htmls and css

--- a/LG.html
+++ b/LG.html
@@ -49,7 +49,7 @@
 				<tr><h1 id = "title">T-Mobile LG K7</h1></tr>
 				<tr><h3 id = "price">Price: $89</h3></tr>
 				<tr><h3 id = "ship">Free Shipping</h3></tr>
-				<tr><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></tr>
+				<tr><a href = "form.html"><img id ="buy" src = "img/buy.jpg" alt = "buy now" style = "width:200px;height:80px;"></a></tr>
 				<tr><p id = "details"> Smooth design and a powerful Snapdragon quad-core processor are yours with this T-Mobile LG K7. Android Lollipop 5.1 ensures seamless operation and keeps you on top of your game, while the large 5-inch screen delivers flawless visuals and excellent responses. A 2,045 mAh battery gives this T-Mobile LG K7 long-lasting power to keep it going throughout the day.</p>
 				</tr>
 				<tr><h4 id = "feature_title">Product Features</h4>
