--- a/acer.html
+++ b/acer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 	<head>
-		<title> acers</title>
+		<title> Acer</title>
 		<meta charset = "utf-8">
 		<meta name = "Description", content = "Product Details">
 		<meta name = "keywords", content = "IMAGE, PRICE, INFO">
