--- a/iphone6s.html
+++ b/iphone6s.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 	<head>
 
-		<title> LG </title>
+		<title> Iphone 6s </title>
 		<meta charset = "utf-8">
 		<meta name = "Description", content = "Product Details">
 		<meta name = "keywords", content = "IMAGE, PRICE, INFO">
